# docs/swagger.json
@@ -33,6 +33,15 @@
                         "name": "contentTypeId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "column name : its type",
+                        "name": "columnName",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ColumnNameExample"
+                        }
                     }
                 ],
                 "responses": {
@@ -70,16 +79,13 @@
             }
         },
         "/contentType/delcol/{userId}/{contentTypeId}": {
-            "delete": {
+            "put": {
                 "security": [
                     {
                         "bearerAuth": []
                     }
                 ],
                 "description": "takes userId and content type Id in path to delete a column",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -97,6 +103,13 @@
                         "description": "Content Type ID",
                         "name": "contentTypeId",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Column Name",
+                        "name": "name",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -163,6 +176,15 @@
                         "name": "contentTypeId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "oldname :  newname",
+                        "name": "columnName",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ColumnNameExample"
+                        }
                     }
                 ],
                 "responses": {
@@ -201,6 +223,11 @@
         },
         "/contentType/{userId}": {
             "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "takes user id as path param to check his role and see if he is authorized to do this action, name is a required attribute",
                 "consumes": [
                     "application/json"
@@ -563,6 +590,14 @@
             "type": "object",
             "properties": {
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.ColumnNameExample": {
+            "type": "object",
+            "properties": {
+                "name": {
                     "type": "string"
                 }
             }
